public/css/main.css
@import 'https://fonts.googleapis.com/css?family=Audiowide|Roboto:300,300i,700,700i';
* {
  box-sizing: border-box;
}

body {
  background-color: #212825;
  color: #ffffff;
}

nav {
  background-color: #ffffff;
}

a {
  transition: 0.3s ease all;
}

.header {
  background-color: #ffffff;
  color: #2c2f33;
  height: 100px;
}

.logo {
  margin: 20px;
  display: none;
}

.logo1 {
  margin: 20px;
  display: inline-block;
}

.selected {
  color: #2c2f33;
  border-bottom: 3px solid #63d297 !important;
}

.nav {
  display: inline-block;
  text-align: right;
}

.nav .nav-link {
  display: inline-block;
  padding: 10px;
  margin: 20px;
  font-weight: 700;
  border-bottom: 3px solid #ffffff;
  transition: 0.3s ease all;
}

.nav .nav-link:hover, .nav .nav-link:active, .nav .nav-link:focus {
  color: #2c2f33;
  border-bottom: 3px solid #63d297;
}

.nav span {
  font-size: 2.5rem;
}

.profile {
  margin-left: 25px;
  display: inline-block;
  border-bottom: 3px solid #ffffff;
}

.username {
  display: inline-block;
  font-weight: bold;
  color: #2c2f33;
  margin: 0;
}

.avatar {
  display: inline-block;
  border-radius: 15px;
  border: 2px solid #b4c4bc;
  margin-left: 5px;
  margin-bottom: -7px;
}

.logout {
  display: inline-block;
  margin-left: 20px;
  margin-bottom: -5px;
}

.login {
  margin-top: 23px;
  display: flex;
  padding: 0 0.7rem;
}

.discord-logo {
  margin-top: 3px;
  margin-right: 8px;
}

.logo-jumbo {
  width: 75%;
  min-width: 200px;
  max-width: 600px;
  margin: 150px auto 50px;
  display: block;
  -webkit-filter: drop-shadow(5px 5px 5px #2c2f33);
  filter: drop-shadow(5px 5px 5px #2c2f33);
}

video#bgvid {
  position: fixed;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
  -ms-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  background: url(../assets/video/moba.png) no-repeat;
  background-size: cover;
}

.video-overlay {
  position: absolute;
  left: 0;
  top: 135px;
  width: 100%;
  height: 80vh;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 2;
}

.jumbo-copy {
  position: absolute;
  width: 100%;
  z-index: 2;
  text-align: center;
  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
}

.learn {
  color: white;
  display: inline-block;
  margin-top: 110px;
  margin-bottom: 0;
  text-shadow: none;
  font-weight: 700;
}

.learn:hover {
  color: #63d297;
}

.login-message {
  position: relative;
  z-index: 2;
  text-align: center;
  width: 50%;
  margin: 100px auto;
}

.login-message a {
  padding-bottom: 2px;
  border-bottom: 2px solid #63d297;
}

.login-message a:hover {
  color: #ffffff;
}

#games {
  margin-top: 20px;
}

.game-header {
  margin-top: 15px;
}

#game-title {
  color: #63d297;
}

.game-tile {
  cursor: pointer;
}

.game-tile:hover .tile-title {
  color: #63d297;
  border-bottom: 1px solid #63d297;
}

.game-tile:hover .tile-img {
  border: 2px solid #63d297;
  transform: scale(1.03);
}

.tile-img {
  width: 100%;
  border: 2px solid #b4c4bc;
  transition: 0.3s ease all;
  box-shadow: 0 8px 6px -6px #212825;
}

.tile-title {
  display: inline-block;
  font-size: 2rem;
  color: #ffffff;
  border-bottom: 1px solid transparent;
  transition: 0.3s ease all;
  margin-bottom: 5px;
}

.tile-teams {
  color: #b4c4bc;
  font-size: 1.2rem;
  margin-bottom: 20px;
}

.create-team-box {
  background-color: #2c2f33;
  border: 2px solid #b4c4bc;
  border-radius: 20px;
  height: 200px;
  text-align: center;
}

.create-team-box:hover {
  border: 2px solid #63d297;
}

.create-team-box:hover .plus-icon-path {
  fill: #63d297;
}

.create-team {
  color: #b4c4bc;
  transition: 0.3s ease all;
}

.create-team:hover {
  color: #ffffff;
}

.plus-icon {
  width: 100%;
  max-width: 64px;
  height: 100%;
  max-height: 64px;
  margin: 10px;
}

.plus-icon-path {
  fill: #b4c4bc;
  transition: 0.3s ease all;
}

.team-tile {
  background-color: #2c2f33;
  color: #b4c4bc;
  border: 2px solid #b4c4bc;
  border-radius: 20px;
  height: 200px;
  text-align: center;
  padding: 20px;
  margin-bottom: 20px;
}

.team-size {
  font-weight: bold;
}

.team-avatar {
  width: 100%;
  border: 1px solid #b4c4bc;
  border-radius: 5px;
}

.info-icon {
  width: 100%;
  max-width: 32px;
  height: 100%;
  max-height: 32px;
}

.info-icon-path {
  fill: #b4c4bc !important;
  transition: 0.3s ease all;
}

.game-mode {
  font-weight: bold;
  margin-bottom: 0;
  margin-top: 5px;
  font-size: 1.5rem;
}

.join {
  transition: 0.3s ease all;
}

.join:hover {
  border: 1px solid #ffffff !important;
  color: #ffffff !important;
}

.join:focus {
  border: 1px solid #b4c4bc !important;
  color: #b4c4bc !important;
}

.game-background-1 {
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../assets/images/games/art/overwatch.jpg);
  background-size: cover;
}

.game-background-2 {
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../assets/images/games/art/lol.jpg);
  background-size: cover;
}

.game-background-3 {
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../assets/images/games/art/dota2.jpg);
  background-size: cover;
}

.game-background-4 {
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../assets/images/games/art/smite.jpg);
  background-size: cover;
}

.game-background-5 {
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../assets/images/games/art/hots.jpg);
  background-size: cover;
}

#team-lobby {
  height: 70vh;
  margin-top: 50px;
}

.team-label {
  color: #63d297;
}

.team-info {
  color: #ffffff;
}

.party {
  width: 100%;
  border: 2px solid #b4c4bc;
  border-radius: 5px;
}

.leader-icon {
  position: relative;
  top: -90px;
  width: 12px;
}

.chat {
  background-color: #212825;
  border: 1px solid #b4c4bc;
  border-bottom: none;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  width: 100%;
  height: 380px;
  padding: 10px;
  overflow: scroll;
  overflow-wrap: break-word;
}

.chat-input-box {
  background-color: #2c2f33;
  border: 1px solid #b4c4bc;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  width: 100%;
  height: 100px;
  padding: 10px;
}

.chat-input {
  width: 173px;
  height: 77px;
  color: #212825;
  background-color: #ffffff;
  border: 1px solid #b4c4bc;
  resize: none;
  border-radius: 0;
}

.chat-button {
  width: 58px;
  padding: 0 0;
  height: 77px;
  border-radius: 0;
  vertical-align: top;
}

.chat-list {
  margin-bottom: 0;
}

.chat-item {
  list-style: none;
  margin-bottom: 5px;
}

.chat-name {
  color: #63d297;
  font-weight: bold;
  font-size: 12px;
  margin: 0;
}

.chat-message {
  margin: 0;
  font-size: 12px;
}

.player-action {
  font-size: 12px;
  font-style: italic;
  font-weight: lighter;
  color: #b4c4bc;
}

.create-modal {
  color: #ffffff;
}

.jBox-title {
  background-color: #ffffff !important;
  color: #212825 !important;
}

.jBox-content {
  background-color: #212825 !important;
}

#grabMe {
  width: 47vw;
}

#access-checkbox-label {
  display: inline;
  font-weight: normal;
  margin-right: 10px;
}

.no-desc {
  font-style: italic;
  font-weight: lighter;
  color: #b4c4bc !important;
}

.popover-team-avatar {
  position: relative;
}

.popover-team-avatar .popover {
  background-color: rgba(0, 0, 0, 0.85);
  border: 1px solid #63d297;
  border-radius: 5px;
  bottom: 43px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
  color: #fff;
  display: none;
  font-size: 12px;
  left: -54px;
  padding: 7px 10px;
  position: absolute;
  width: 160px;
  z-index: 4;
}

.popover-team-avatar .popover:before {
  border-top: 7px solid rgba(99, 210, 151, 0.85);
  border-right: 7px solid transparent;
  border-left: 7px solid transparent;
  bottom: -7px;
  content: '';
  display: block;
  left: 50%;
  margin-left: -7px;
  position: absolute;
}

.popover-team-avatar:hover .popover {
  display: block;
  -webkit-animation: fade-in .3s linear 1, move-up .3s linear 1;
  -moz-animation: fade-in .3s linear 1, move-up .3s linear 1;
  -ms-animation: fade-in .3s linear 1, move-up .3s linear 1;
}

.popover-team-description {
  position: relative;
}

.popover-team-description .popover {
  background-color: rgba(0, 0, 0, 0.85);
  border: 1px solid #63d297;
  border-radius: 5px;
  bottom: 43px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
  color: #fff;
  display: none;
  font-size: 12px;
  left: -88px;
  padding: 7px 10px;
  position: absolute;
  width: 240px;
  z-index: 4;
}

.popover-team-description .popover:before {
  border-top: 7px solid rgba(99, 210, 151, 0.85);
  border-right: 7px solid transparent;
  border-left: 7px solid transparent;
  bottom: -7px;
  content: '';
  display: block;
  left: 50%;
  margin-left: -7px;
  position: absolute;
}

.popover-team-description:hover .popover {
  display: block;
  -webkit-animation: fade-in .3s linear 1, move-up .3s linear 1;
  -moz-animation: fade-in .3s linear 1, move-up .3s linear 1;
  -ms-animation: fade-in .3s linear 1, move-up .3s linear 1;
}

@-webkit-keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-moz-keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-ms-keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-webkit-keyframes move-up {
  from {
    bottom: 30px;
  }
  to {
    bottom: 42px;
  }
}

@-moz-keyframes move-up {
  from {
    bottom: 30px;
  }
  to {
    bottom: 42px;
  }
}

@-ms-keyframes move-up {
  from {
    bottom: 30px;
  }
  to {
    bottom: 42px;
  }
}

@media screen and (min-width: 40rem) {
  .logo {
    margin: 20px;
    display: inline-block;
  }
  .logo1 {
    margin: 20px;
    display: none;
  }
  .video-overlay {
    height: 100%;
    top: 100px;
  }
}

@media screen and (max-device-width: 800px) {
  html {
    background: url(../assets/video/moba.png) #000 no-repeat center center fixed;
    background-size: cover;
  }
  #bgvid {
    display: none;
  }
}

